HellScript/ANTLR/HellScript/HellScriptParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from f:/HellScriptLanguage/BashHellScript/BashHellScript/ANTLR/HellScript/HellScriptParser.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class HellScriptParser : HellScriptParserBase {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		RuntimeVersion=1, ImportScript=2, ImportLibrary=3, HashBangLine=4, MultiLineComment=5, 
		SingleLineComment=6, OpenBracket=7, CloseBracket=8, OpenParen=9, CloseParen=10, 
		OpenBrace=11, TemplateCloseBrace=12, CloseBrace=13, SemiColon=14, Comma=15, 
		Assign=16, QuestionMark=17, Colon=18, Dot=19, PlusPlus=20, MinusMinus=21, 
		Plus=22, Minus=23, BitNot=24, Not=25, Multiply=26, Divide=27, Modulus=28, 
		Power=29, NullCoalesce=30, Hashtag=31, RightShiftArithmetic=32, LeftShiftArithmetic=33, 
		LessThan=34, MoreThan=35, LessThanEquals=36, GreaterThanEquals=37, Equals_=38, 
		NotEquals=39, IdentityEquals=40, IdentityNotEquals=41, BitAnd=42, BitXOr=43, 
		BitOr=44, And=45, Or=46, MultiplyAssign=47, DivideAssign=48, ModulusAssign=49, 
		PlusAssign=50, MinusAssign=51, LeftShiftArithmeticAssign=52, RightShiftArithmeticAssign=53, 
		BitAndAssign=54, BitXorAssign=55, BitOrAssign=56, PowerAssign=57, NullishCoalescingAssign=58, 
		Arrow=59, NullLiteral=60, BooleanLiteral=61, DecimalLiteral=62, HexIntegerLiteral=63, 
		OctalIntegerLiteral=64, OctalIntegerLiteral2=65, BinaryIntegerLiteral=66, 
		BigHexIntegerLiteral=67, BigOctalIntegerLiteral=68, BigBinaryIntegerLiteral=69, 
		BigDecimalIntegerLiteral=70, Break=71, Do=72, Typeof=73, Case=74, Else=75, 
		New=76, Var=77, Catch=78, Finally=79, Return=80, Void=81, Continue=82, 
		For=83, Switch=84, While=85, Function_=86, This=87, With=88, Default=89, 
		If=90, Throw=91, Delete=92, In=93, Try=94, As=95, Class=96, Get=97, Set=98, 
		Enum=99, Extends=100, Const=101, Params=102, Private=103, Public=104, 
		Interface=105, Protected=106, Static=107, Identifier=108, StringLiteral=109, 
		BackTick=110, WhiteSpaces=111, LineTerminator=112, UnexpectedCharacter=113, 
		TemplateStringStartExpression=114, TemplateStringAtom=115;
	public const int
		RULE_program = 0, RULE_sourceElement = 1, RULE_statement = 2, RULE_block = 3, 
		RULE_statementList = 4, RULE_runtimeVersion = 5, RULE_imports = 6, RULE_declaration = 7, 
		RULE_variableStatement = 8, RULE_variableDeclarationList = 9, RULE_variableDeclaration = 10, 
		RULE_emptyStatement_ = 11, RULE_expressionStatement = 12, RULE_ifStatement = 13, 
		RULE_iterationStatement = 14, RULE_continueStatement = 15, RULE_breakStatement = 16, 
		RULE_returnStatement = 17, RULE_switchStatement = 18, RULE_caseBlock = 19, 
		RULE_caseClauses = 20, RULE_caseClause = 21, RULE_defaultClause = 22, 
		RULE_throwStatement = 23, RULE_tryStatement = 24, RULE_catchProduction = 25, 
		RULE_finallyProduction = 26, RULE_functionDeclaration = 27, RULE_classDeclaration = 28, 
		RULE_classTail = 29, RULE_classElement = 30, RULE_methodDefinition = 31, 
		RULE_fieldDefinition = 32, RULE_classElementName = 33, RULE_privateIdentifier = 34, 
		RULE_formalParameterList = 35, RULE_formalParameterArg = 36, RULE_lastFormalParameterArg = 37, 
		RULE_functionBody = 38, RULE_sourceElements = 39, RULE_arrayLiteral = 40, 
		RULE_elementList = 41, RULE_arrayElement = 42, RULE_propertyName = 43, 
		RULE_arguments = 44, RULE_argument = 45, RULE_expressionSequence = 46, 
		RULE_singleExpression = 47, RULE_initializer = 48, RULE_assignable = 49, 
		RULE_anonymousFunction = 50, RULE_arrowFunctionParameters = 51, RULE_arrowFunctionBody = 52, 
		RULE_assignmentOperator = 53, RULE_literal = 54, RULE_numericLiteral = 55, 
		RULE_bigintLiteral = 56, RULE_getter = 57, RULE_setter = 58, RULE_arrowBlock = 59, 
		RULE_chainedIdentifier = 60, RULE_identifierName = 61, RULE_identifier = 62, 
		RULE_typeName = 63, RULE_reservedWord = 64, RULE_keyword = 65, RULE_eos = 66;
	public static readonly string[] ruleNames = {
		"program", "sourceElement", "statement", "block", "statementList", "runtimeVersion", 
		"imports", "declaration", "variableStatement", "variableDeclarationList", 
		"variableDeclaration", "emptyStatement_", "expressionStatement", "ifStatement", 
		"iterationStatement", "continueStatement", "breakStatement", "returnStatement", 
		"switchStatement", "caseBlock", "caseClauses", "caseClause", "defaultClause", 
		"throwStatement", "tryStatement", "catchProduction", "finallyProduction", 
		"functionDeclaration", "classDeclaration", "classTail", "classElement", 
		"methodDefinition", "fieldDefinition", "classElementName", "privateIdentifier", 
		"formalParameterList", "formalParameterArg", "lastFormalParameterArg", 
		"functionBody", "sourceElements", "arrayLiteral", "elementList", "arrayElement", 
		"propertyName", "arguments", "argument", "expressionSequence", "singleExpression", 
		"initializer", "assignable", "anonymousFunction", "arrowFunctionParameters", 
		"arrowFunctionBody", "assignmentOperator", "literal", "numericLiteral", 
		"bigintLiteral", "getter", "setter", "arrowBlock", "chainedIdentifier", 
		"identifierName", "identifier", "typeName", "reservedWord", "keyword", 
		"eos"
	};

	private static readonly string[] _LiteralNames = {
		null, "'#version'", "'#import'", "'#use'", null, null, null, "'['", "']'", 
		"'('", "')'", "'{'", null, "'}'", "';'", "','", "'='", "'?'", "':'", "'.'", 
		"'++'", "'--'", "'+'", "'-'", "'~'", "'!'", "'*'", "'/'", "'%'", "'**'", 
		"'??'", "'#'", "'>>'", "'<<'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", 
		"':=='", "':!='", "'&'", "'^'", "'|'", null, null, "'*='", "'/='", "'%='", 
		"'+='", "'-='", "'<<='", "'>>='", "'&='", "'^='", "'|='", "'**='", "'??='", 
		"'->'", "'null'", null, null, null, null, null, null, null, null, null, 
		null, "'break'", "'do'", "'typeof'", "'case'", "'else'", "'new'", "'var'", 
		"'catch'", "'finally'", "'return'", "'void'", "'continue'", "'for'", "'switch'", 
		"'while'", "'function'", "'this'", "'with'", "'default'", "'if'", "'throw'", 
		"'delete'", "'in'", "'try'", "'as'", "'class'", "'get'", "'set'", "'enum'", 
		null, "'const'", "'params'", "'private'", "'public'", "'interface'", "'protected'", 
		"'static'", null, null, null, null, null, null, "'${'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "RuntimeVersion", "ImportScript", "ImportLibrary", "HashBangLine", 
		"MultiLineComment", "SingleLineComment", "OpenBracket", "CloseBracket", 
		"OpenParen", "CloseParen", "OpenBrace", "TemplateCloseBrace", "CloseBrace", 
		"SemiColon", "Comma", "Assign", "QuestionMark", "Colon", "Dot", "PlusPlus", 
		"MinusMinus", "Plus", "Minus", "BitNot", "Not", "Multiply", "Divide", 
		"Modulus", "Power", "NullCoalesce", "Hashtag", "RightShiftArithmetic", 
		"LeftShiftArithmetic", "LessThan", "MoreThan", "LessThanEquals", "GreaterThanEquals", 
		"Equals_", "NotEquals", "IdentityEquals", "IdentityNotEquals", "BitAnd", 
		"BitXOr", "BitOr", "And", "Or", "MultiplyAssign", "DivideAssign", "ModulusAssign", 
		"PlusAssign", "MinusAssign", "LeftShiftArithmeticAssign", "RightShiftArithmeticAssign", 
		"BitAndAssign", "BitXorAssign", "BitOrAssign", "PowerAssign", "NullishCoalescingAssign", 
		"Arrow", "NullLiteral", "BooleanLiteral", "DecimalLiteral", "HexIntegerLiteral", 
		"OctalIntegerLiteral", "OctalIntegerLiteral2", "BinaryIntegerLiteral", 
		"BigHexIntegerLiteral", "BigOctalIntegerLiteral", "BigBinaryIntegerLiteral", 
		"BigDecimalIntegerLiteral", "Break", "Do", "Typeof", "Case", "Else", "New", 
		"Var", "Catch", "Finally", "Return", "Void", "Continue", "For", "Switch", 
		"While", "Function_", "This", "With", "Default", "If", "Throw", "Delete", 
		"In", "Try", "As", "Class", "Get", "Set", "Enum", "Extends", "Const", 
		"Params", "Private", "Public", "Interface", "Protected", "Static", "Identifier", 
		"StringLiteral", "BackTick", "WhiteSpaces", "LineTerminator", "UnexpectedCharacter", 
		"TemplateStringStartExpression", "TemplateStringAtom"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "HellScriptParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static HellScriptParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public HellScriptParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public HellScriptParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(HellScriptParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HashBangLine() { return GetToken(HellScriptParser.HashBangLine, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public RuntimeVersionContext runtimeVersion() {
			return GetRuleContext<RuntimeVersionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ImportsContext[] imports() {
			return GetRuleContexts<ImportsContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ImportsContext imports(int i) {
			return GetRuleContext<ImportsContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SourceElementsContext sourceElements() {
			return GetRuleContext<SourceElementsContext>(0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHellScriptParserVisitor<TResult> typedVisitor = visitor as IHellScriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 135;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				{
				State = 134;
				Match(HashBangLine);
				}
				break;
			}
			State = 138;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				{
				State = 137;
				runtimeVersion();
				}
				break;
			}
			State = 143;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 140;
					imports();
					}
					} 
				}
				State = 145;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			}
			State = 147;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				{
				State = 146;
				sourceElements();
				}
				break;
			}
			State = 149;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SourceElementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		public SourceElementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sourceElement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHellScriptParserVisitor<TResult> typedVisitor = visitor as IHellScriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSourceElement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SourceElementContext sourceElement() {
		SourceElementContext _localctx = new SourceElementContext(Context, State);
		EnterRule(_localctx, 2, RULE_sourceElement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 151;
			statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariableStatementContext variableStatement() {
			return GetRuleContext<VariableStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EmptyStatement_Context emptyStatement_() {
			return GetRuleContext<EmptyStatement_Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ClassDeclarationContext classDeclaration() {
			return GetRuleContext<ClassDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionDeclarationContext functionDeclaration() {
			return GetRuleContext<FunctionDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionStatementContext expressionStatement() {
			return GetRuleContext<ExpressionStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IfStatementContext ifStatement() {
			return GetRuleContext<IfStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IterationStatementContext iterationStatement() {
			return GetRuleContext<IterationStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ContinueStatementContext continueStatement() {
			return GetRuleContext<ContinueStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BreakStatementContext breakStatement() {
			return GetRuleContext<BreakStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ReturnStatementContext returnStatement() {
			return GetRuleContext<ReturnStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SwitchStatementContext switchStatement() {
			return GetRuleContext<SwitchStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ThrowStatementContext throwStatement() {
			return GetRuleContext<ThrowStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TryStatementContext tryStatement() {
			return GetRuleContext<TryStatementContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHellScriptParserVisitor<TResult> typedVisitor = visitor as IHellScriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 4, RULE_statement);
		try {
			State = 167;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 153;
				block();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 154;
				variableStatement();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 155;
				emptyStatement_();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 156;
				classDeclaration();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 157;
				functionDeclaration();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 158;
				expressionStatement();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 159;
				ifStatement();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 160;
				iterationStatement();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 161;
				continueStatement();
				}
				break;
			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 162;
				breakStatement();
				}
				break;
			case 11:
				EnterOuterAlt(_localctx, 11);
				{
				State = 163;
				returnStatement();
				}
				break;
			case 12:
				EnterOuterAlt(_localctx, 12);
				{
				State = 164;
				switchStatement();
				}
				break;
			case 13:
				EnterOuterAlt(_localctx, 13);
				{
				State = 165;
				throwStatement();
				}
				break;
			case 14:
				EnterOuterAlt(_localctx, 14);
				{
				State = 166;
				tryStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OpenBrace() { return GetToken(HellScriptParser.OpenBrace, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CloseBrace() { return GetToken(HellScriptParser.CloseBrace, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatementListContext statementList() {
			return GetRuleContext<StatementListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ArrowBlockContext arrowBlock() {
			return GetRuleContext<ArrowBlockContext>(0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHellScriptParserVisitor<TResult> typedVisitor = visitor as IHellScriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 6, RULE_block);
		try {
			State = 175;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case OpenBrace:
				EnterOuterAlt(_localctx, 1);
				{
				State = 169;
				Match(OpenBrace);
				State = 171;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
				case 1:
					{
					State = 170;
					statementList();
					}
					break;
				}
				State = 173;
				Match(CloseBrace);
				}
				break;
			case Arrow:
				EnterOuterAlt(_localctx, 2);
				{
				State = 174;
				arrowBlock();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementListContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public StatementListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statementList; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHellScriptParserVisitor<TResult> typedVisitor = visitor as IHellScriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatementList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementListContext statementList() {
		StatementListContext _localctx = new StatementListContext(Context, State);
		EnterRule(_localctx, 8, RULE_statementList);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 178;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 177;
					statement();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 180;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,7,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RuntimeVersionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RuntimeVersion() { return GetToken(HellScriptParser.RuntimeVersion, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode StringLiteral() { return GetToken(HellScriptParser.StringLiteral, 0); }
